--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.jpg" alt="">
+                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="https://media.discordapp.net/attachments/548043256148000770/1051738119533240370/IMG_1315.jpg?width=553&height=737" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
@@ -108,7 +108,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
+                    <img class="img-fluid rounded w-100" src="https://media.discordapp.net/attachments/548043256148000770/1051738119533240370/IMG_1315.jpg?width=553&height=737" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Full Stack Web Developer</h3>
